# ParallelizationEncryption

./: .gitignore  .gitmodules  CMakeLists.txt  ParallelizationEncryption.sln  README.md
CPU/: AESv1.cpp  AESv1.h  AESv2.cpp  AESv2.h  AESv3.cpp  AESv3.h  Api.h  CMakeLists.txt  CPU.cpp  CPU.vcxproj  CPU.vcxproj.filters  CPUSingle.cpp  DESv1.cpp  DESv1.h  DESv2.cpp  DESv2.h  DESv3.cpp  DESv3.h  MbedTest.cpp  MbedTest.h  Triple.h
CPUGCC/: CMakeLists.txt  CPUGCC.cpp  CPUGCC.h
GPU/: AES.cu  AES.h  AEScl.cpp  AEScl.h  Api.h  CMakeLists.txt  DES.cu  DES.h  DEScl.cpp  DEScl.h  Dynamic.cpp  Dynamic.h  GPU.cu  GPU.vcxproj  OpenCL.cpp  OpenCL.h  aes.cl  des.cl
Shared/: Base.h  Shared.h  Shared.vcxproj  Shared.vcxproj.filters
Test/: CMakeLists.txt  CPU.cpp  ErrorTest.cpp  ErrorTest.h  Test.vcxproj  Test.vcxproj.filters  TimeTest.cpp  TimeTest.h  aes.cl  des.cl  matplotlibcpp.h
